--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ img {
     background-position: center center;
 }
 
-@media (max-width: 768px ) {
+@media (min-width: 768px ) {
     .site_name {
         font-size: 4rem;
     }
