--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ img {
 /*Header y navegación*/
 
 .site_name{
-    font-size: 5rem;
+    font-size: 4rem;
     color: #000;
     margin-top: 5rem;
     margin-bottom: 5rem;
@@ -45,18 +45,19 @@ img {
 }
 
 .site_name span {
-    color: #5BF0D2;
+    color: #1DA389;
 
 }
 
 
 
 .nav {
-    border-top: 1px solid #FF9E7A;
+    border-top: 1px solid #5BF0D2;
     padding: 2rem 0 3rem 2rem;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    
 }
 
 .nav a{
@@ -67,24 +68,30 @@ img {
 }
 
 .nav a:hover{
-    border-bottom: 1px solid #FF9E7A;
+    border-bottom: 1px solid #1DA389;
     color:#5BF0D2
 }
 
 
 .hero{
     background-image: url(../assets/principal.jpg);
-    height: 55rem;
+    height: 25rem;
     background-size: cover;
     background-position: center center;
 }
 
 @media (min-width: 768px ) {
     .site_name {
-        font-size: 4rem;
+        font-size: 5rem;
     }
+    .nav {
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+    .hero{
+        height: 55rem;
 
-    
+    }
 }
 
 /** Categorías **/
@@ -92,6 +99,18 @@ img {
 .container h2{
     text-align: center;
 }
+
+.categories{
+    padding: 5rem 0;
+}
+
+.category{
+    margin-bottom: 2rem;
+}
+.category img {
+    width: 100%;
+}
+
 .category a{
     display: block;
     text-align: center;
@@ -103,19 +122,29 @@ img {
 }
 
 .category a:hover{
-    background-color: #FF9E7A;
+    background-color: #1DA389;
     color: #5BF0D2;
     border-bottom-left-radius: 1.5rem;
     border-bottom-right-radius: 1.5rem;
 
 }
 
-.categories{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    height: 30rem;
-    gap: 2rem;
-    margin-bottom: 4rem;
+
+
+@media (min-width: 768px ) {
+    .category{
+        margin-bottom: 0;
+    }
+    .list-categories{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        height: 30rem;
+        gap: 2rem;
+        margin-bottom: 0rem;
+    }
+    .categories{
+        padding: 4rem 0;
+    }
 }
 
 /** Box model about_us **/
@@ -123,36 +152,54 @@ img {
     color: #5BF0D2;
 }
 .about_us{
-    max-height: 40rem;
-    background-image: linear-gradient(to right, transparent 50%,
-    #A34D2E 50%, #A34D2E 100% ), url(../assets/nosotros.jpg);
-    background-position: left center;
+    background-image: linear-gradient(to bottom, transparent 50%,
+    #037bc0 50%, #037bc0 100% ), url(../assets/nosotros.jpg);
+    background-position: center, top left; /*ubicacióncolor, ubicaciónimagen*/
     background-repeat: no-repeat;
-    background-size: 100%, 120rem;
+    background-size: 100%, 86rem;
 
 }
 
 .about_us_grid{
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    column-gap: 8rem;
+    grid-template-rows: repeat(2,1fr);
 }
 
 .text_about_us{
-    grid-column: 2/3;/*Indica que va de la linea 2 a la 3*/
-}
-
-.text_about_us p{
+    grid-row: 2/3;
+    padding: 5rem 5rem;
     color: white;
 }
 
+@media (min-width: 768px ) {
+    .about_us{
+        background-image: linear-gradient(to right, transparent 50%,
+        #037bc0 50%, #037bc0 100% ), url(../assets/nosotros.jpg);
+        background-position: left center;
+        background-repeat: no-repeat;
+        background-size: 100%, 120rem;
+    }
+    .about_us_grid{
+        display: grid;
+        grid-template-rows: none; /*Hay que especificar para sobrescribir el template row*/
+        grid-template-columns: repeat(2,1fr);
+    }
+    .text_about_us{
+        grid-column: 2/3;
+        color: white;
+        padding: 2rem 2rem;
+    }
+    
+}
+
+
 /*empieza productos*/
 .principal{
-    padding: 5rem;
+    padding: 5rem 0;
 }
 
 .product{
-    background-color: #A34D2E;
+    background-color: #037bc0;
 }
 
 .text_product{
@@ -183,7 +230,7 @@ img {
 }
 
 .principal button:hover{
-    background-color: #46b9a2;
+    background-color: #5BF0D2;
     transition: background-color .5s ease-out;
 }
 
@@ -193,75 +240,78 @@ img {
 }
 
 /*Grid de productos*/
-.product_list{
-    display: grid;
-    grid-template-columns: repeat(6,1fr);
-    gap: 2rem;
-}
 
-.product:nth-child(1){
-    grid-column: 1/7;
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-}
-
-.product:nth-child(1) img{
-    height: 43rem;
-    width: 100%;
-    object-fit: cover;
-}
-
-.product:nth-child(2){
-    grid-column: 1/4;
-}
-
-.product:nth-child(2) img{
-    height: 30rem;
-    width: 100%;
-    object-fit: cover;
-}
-
-.product:nth-child(3){
-    grid-column: 4/7;
-}
-
-.product:nth-child(3) img{
-    height: 30rem;
-    width: 100%;
-    object-fit: cover;
-}
-
-
-.product:nth-child(4){
-    grid-column: 1/3;
-}
-
-.product:nth-child(4) img{
-    height: 30rem;
-    width: 100%;
-    object-fit: cover;
-}
-
-
-.product:nth-child(5){
-    grid-column: 3/5;
-}
-
-.product:nth-child(5) img{
-    height: 30rem;
-    width: 100%;
-    object-fit: cover;
-}
-
-
-.product:nth-child(6){
-    grid-column: 5/7;
-}
-
-.product:nth-child(6) img{
-    height: 30rem;
-    width: 100%;
-    object-fit: cover;
+@media (min-width: 768px) {
+    .product_list{
+        display: grid;
+        grid-template-columns: repeat(6,1fr);
+        gap: 2rem;
+    }
+    
+    .product:nth-child(1){
+        grid-column: 1/7;
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+    }
+    
+    .product:nth-child(1) img{
+        height: 43rem;
+        width: 100%;
+        object-fit: cover;
+    }
+    
+    .product:nth-child(2){
+        grid-column: 1/4;
+    }
+    
+    .product:nth-child(2) img{
+        height: 30rem;
+        width: 100%;
+        object-fit: cover;
+    }
+    
+    .product:nth-child(3){
+        grid-column: 4/7;
+    }
+    
+    .product:nth-child(3) img{
+        height: 30rem;
+        width: 100%;
+        object-fit: cover;
+    }
+    
+    
+    .product:nth-child(4){
+        grid-column: 1/3;
+    }
+    
+    .product:nth-child(4) img{
+        height: 30rem;
+        width: 100%;
+        object-fit: cover;
+    }
+    
+    
+    .product:nth-child(5){
+        grid-column: 3/5;
+    }
+    
+    .product:nth-child(5) img{
+        height: 30rem;
+        width: 100%;
+        object-fit: cover;
+    }
+    
+    
+    .product:nth-child(6){
+        grid-column: 5/7;
+    }
+    
+    .product:nth-child(6) img{
+        height: 30rem;
+        width: 100%;
+        object-fit: cover;
+    }    
 }
 
 /*foooter*/
@@ -271,7 +321,7 @@ img {
 }
 
 .footer{
-    border-top: 1px solid #FF9E7A;
+    border-top: 1px solid #5BF0D2;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
@@ -298,7 +348,7 @@ img {
 }
 
 .footer a:hover{
-    color: #1DA389;
+    color: #5BF0D2;
 
 }
 
@@ -307,7 +357,6 @@ img {
 .grid_nosotros {
     text-align: justify;
     display: grid;
-    grid-template-columns: 1fr 2fr;
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
     column-gap: 4rem;
 }
