--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,11 @@ img {
 
 .product{
     background-color: #037bc0;
+    margin-bottom: 2rem;
+}
+
+.product:last-of-type{
+    margin-bottom: 0;
 }
 
 .text_product{
@@ -242,6 +247,9 @@ img {
 /*Grid de productos*/
 
 @media (min-width: 768px) {
+    .product{
+        margin-bottom: 0;
+    }
     .product_list{
         display: grid;
         grid-template-columns: repeat(6,1fr);
@@ -322,9 +330,6 @@ img {
 
 .footer{
     border-top: 1px solid #5BF0D2;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
     text-align: center;
     
 }
@@ -352,13 +357,30 @@ img {
 
 }
 
+@media (min-width: 768px) {
+    .footer_grid{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;  
+    }
+
+    
+}
+
 /*NOSOTROS*/
 
 .grid_nosotros {
     text-align: justify;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-    column-gap: 4rem;
+    padding: 0 2rem;
+}
+
+@media (min-width: 768px) {
+    .grid_nosotros {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(46rem, 1fr));
+        column-gap: 4rem;
+    }
+        
 }
 
 
@@ -384,10 +406,10 @@ img {
     color: #1DA389;
 }
 
-.blog_grid {
-    display: grid;
-    grid-template-columns: 2fr 1fr ;
+.blog_grid{
+    padding: 0 2rem;
 }
+
 
 .dauthor {
     display: grid;
@@ -414,14 +436,23 @@ img {
 }
 
 .my_article{
-    border-bottom: 1px solid #FF9E7A;
+    border-bottom: 1px solid #5BF0D2;
     padding-bottom: 4rem;
     margin-bottom: 2rem;
 }
 
-.my_article:last-of-type{
+
+
+@media (min-width: 768px) {
+    .blog_grid {
+        display: grid;
+        grid-template-columns: 2fr 1fr ;
+    }
+    .my_article:last-of-type{
     border: none;
 }
+}
+/*CONTACTO*/
 
 .form {
     max-width: 60rem;
